--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-taser>=0.3.3
-bs4
-unidecode
-requests
-argparse
+beautifulsoup4>=4.11.1
+bs4>=0.0.1
+certifi>=2022.9.14
+charset-normalizer>=2.1.1
+idna>=3.4
+lxml>=4.9.1
+requests>=2.28.1
+soupsieve>=2.3.2.post1
+Unidecode>=1.3.4
+urllib3>=1.26.12
